	* PreferencesController.[h|m] new preference mpdTimeout, and add some
	  sane default values for it, and for mpdHost and mpdPort
	* CollectionController.[h|m] fix some warnings and code cleanup
	* Info-gnustep.plist general bumps from PC
	* MPDController.[h|m]: update to new libmpdclient API
	* PlaylistController.[h|m] code cleanups and now show Genre, and allow
	  filter for Genre

2004-06-14  Daniel Luederwald  <flip@Confusion.CabalOfEntropy.local>

	* OwnTableView.m, FindController.m: Code Reformatting

	* CrossfadeController.m, CollectionController.m, AppController.m:
	Reformatted Code

2004-06-13  Daniel Luederwald  <flip@Confusion.CabalOfEntropy.local>

	* FindController.m, CollectionController.m, CollectionController.h:
	*** empty log message ***

	* AppController.m, AppController.h: Implemented getAlbums service

	* FindController.m, FindController.h, CrossfadeController.m, CrossfadeController.h, CollectionController.m, CollectionController.h, MPDController.m, MPDController.h:
	Refactoring

	* PlaylistController.m, PlaylistController.h: More Refactoring

	* PlayView.m, PlayView.h: Refactoring

	* AppController.h: *** empty log message ***

	* AppController.h, AppController.m: More Refactoring

2004-06-12  Daniel Luederwald  <flip@Confusion.CabalOfEntropy.local>

	* OwnPanel.h, OwnPanel.m: *** empty log message ***

	* OwnPanel.h, OwnPanel.m: New file.

2004-06-04  Daniel Luederwald  <flip@Confusion.CabalOfEntropy.local>

	* FindController.m, FindController.h, AppController.m: Bugfix

	* AppController.m: *** empty log message ***

	* PlaylistsManagerController.m: Begin of localization

	* PlaylistController.m: *** empty log message ***

	* PlayView.m, MPDController.m, FindController.m, AppController.m:
	Begin of localization

	* Strings.h: New file.
