@@ -11,6 +11,8 @@
 	* MPDController.[h|m]: update to new libmpdclient API
 	* PlaylistController.[h|m] code cleanups and now show Genre, and allow
 	  filter for Genre
+	* PlaylistItem.[h|m] code cleanups and now show Genre, and allow
+	  filter for Genre
 
 2004-06-14  Daniel Luederwald  <flip@Confusion.CabalOfEntropy.local>
 
